Add health bars and timer to HTML
Add skeletons for health bars and timers.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
-<canvas></canvas>
+<body>
+    <!-- red container div -->
+    <div style="position: relative">
+        <!-- smaller red container div -->
+        <div style="position: absolute; display: flex; width: 100%">
+            <!-- player health -->
+            <div
+                style="background-color: yellow; height: 30px; width: 100%"
+            ></div>
+            <!-- timer -->
+            <div
+                style="background-color: red; width: 100px; height: 100px;"
+            ></div>
+            <!-- enemy health -->
+            <div
+                style="background-color: yellow; height: 30px; width: 100%"
+            ></div>
+            <div></div>
+        </div>
+        <canvas></canvas>
+    </div>
 
-<script src="index.js"></script>
+    <script src="index.js"></script>
+</body>
