Add health bar logic and styling
Add logic for reducing player and enemy health.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-  </style>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
     <!-- red container div -->
@@ -20,8 +20,27 @@
         >
             <!-- player health -->
             <div
-                style="background-color: yellow; height: 30px; width: 100%"
-            ></div>
+                style="
+                    position: relative;
+                    height: 30px;
+                    width: 100%;
+                    display: flex;
+                    justify-content: flex-end;
+                "
+            >
+                <div style="background-color: yellow; height: 30px; width: 100%;"></div>
+                <div
+                    id="playerHealth"
+                    style="
+                        position: absolute;
+                        background: blue;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+                        width: 100%;
+                    "
+                ></div>
+            </div>
             <!-- timer -->
             <div
                 style="
@@ -32,10 +51,20 @@
                 "
             ></div>
             <!-- enemy health -->
-            <div
-                style="background-color: yellow; height: 30px; width: 100%"
-            ></div>
-            <div></div>
+            <div style="position: relative; height: 30px; width: 100%">
+                <div style="background-color: yellow; height: 30px"></div>
+                <div
+                    id="enemyHealth"
+                    style="
+                        position: absolute;
+                        background: blue;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+                        left: 0;
+                    "
+                ></div>
+            </div>
         </div>
         <canvas></canvas>
     </div>
