Add timer logic and styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                     justify-content: flex-end;
                 "
             >
-                <div style="background-color: yellow; height: 30px; width: 100%;"></div>
+                <div
+                    style="background-color: yellow; height: 30px; width: 100%"
+                ></div>
                 <div
                     id="playerHealth"
                     style="
@@ -43,13 +45,19 @@
             </div>
             <!-- timer -->
             <div
+                id="timer"
                 style="
                     background-color: red;
                     width: 100px;
                     height: 100px;
                     flex-shrink: 0;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 "
-            ></div>
+            >
+                10
+            </div>
             <!-- enemy health -->
             <div style="position: relative; height: 30px; width: 100%">
                 <div style="background-color: yellow; height: 30px"></div>
