Add logic for displaying game text
Display text when either player wins, or both tie.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,26 @@
                 ></div>
             </div>
         </div>
+        <div
+            id="displayText"
+            style="
+                position: absolute;
+                color: white;
+                align-items: center;
+                justify-content: center;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                display: none;
+            "
+        >
+            Tie
+        </div>
         <canvas></canvas>
     </div>
 
     <script src="index.js"></script>
 </body>
+
+<!-- resume at 1:39:52 -->
